# prime-directive

./: .env.example  .gitignore  .windsurfrules  ABOUT_THIS_TEMPLATE.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  HISTORY.md  MANIFEST.in  Makefile  PRD.txt  README.md  codecov.yml  main.py  mkdocs.yml  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  rename_project.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  main.yml
.taskmaster/: state.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  task_024.txt  task_025.txt  task_026.txt  task_027.txt  task_028.txt  task_029.txt  task_030.txt  task_031.txt  task_032.txt  task_033.txt  task_034.txt  task_035.txt  task_036.txt  tasks.json
data/: prime.db
docs/: AIV-PACKET-PR16.yaml  AIV-SOP.md  CODE-AUDIT-V1.0-PRIME-DIRECTIVE_2025-12-14_01.md  DOSSIER-V31-PHASE-A-REVIEW.md  PD-ARCH-V2.1-STRATEGIST_2025-12-16.md  PD-ARCH-V3.0-GRAND-STRATEGIST.md  PD-ARCH-V3.1-IDENTITY.md  SPEC-V1.2-FREEZE-PROTOCOL.md  index.md
docs/archive/: DEBRIEF-V1.1-PLAN.md
docs/archive/audits/: CODE-AUDIT-V1.0-PRIME-DIRECTIVE_2025-12-15_01.md  CODE-AUDIT-V1.0-PRIME-DIRECTIVE_2025-12-15_02.md  DOC-AUDIT-V1.0-PRIME-DIRECTIVE_2025-12-16_01.md
docs/archive/pr_comments/: PR_ISSUES_DEC14_2025.md  PR_ISSUES_DEC15_2025.md  PR_ISSUES_DEC15_2025_2.md
prime_directive/: __main__.py  base.py  cli.py
prime_directive/conf/: config.yaml
prime_directive/core/: ai_providers.py  auto_installer.py  config.py  db.py  dependencies.py  dossier_ai.py  empire.py  git_utils.py  identity.py  logging_utils.py  orchestrator.py  registry.py  scribe.py  skill_scanner.py  tasks.py  terminal.py  tmux.py  windsurf.py
prime_directive/system/: registry.yaml  shell_integration.bash  shell_integration.zsh
tests/: test_auto_installer.py  test_base.py  test_cli.py  test_daemon.py  test_db.py  test_debug.py  test_dependencies.py  test_dossier_ai.py  test_empire.py  test_freeze.py  test_git.py  test_identity.py  test_integration.py  test_registry.py  test_scribe.py  test_skill_scanner.py  test_switch.py  test_tasks.py  test_terminal.py  test_tmux.py  test_windsurf.py
