[project]
name = "prime-directive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "rich>=13.9.0",
    "sqlmodel>=0.0.22",
    "typer[all]>=0.12.0",
    "watchdog>=5.0.2",
]

[project.scripts]
pd = "prime_directive.bin.pd:cli"
pd-daemon = "prime_directive.bin.pd_daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
