[project]
name = "prime-directive"
version = "0.1.0"
description = "AI-powered context preservation system for multi-repository development workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "greenlet>=3.3.0",
    "httpx>=0.27.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.4",
    "rich>=13.9.0",
    "sqlmodel>=0.0.27",
    "typer[all]>=0.12.0",
    "watchdog>=5.0.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4",
    "coverage>=7",
    "flake8>=7",
    "black>=24",
    "isort>=5",
    "mypy>=1",
    "types-requests",
    "types-PyYAML",
    "gitchangelog",
    "mkdocs",
]

[project.scripts]
pd = "prime_directive.bin.pd:cli"
pd-daemon = "prime_directive.bin.pd_daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
